--- a/public/dev.html
+++ b/public/dev.html
@@ -29,21 +29,70 @@
         <script src="d/js/router.js"></script>
         <script>
             (function() {
-                if(!console || !console.log){ var console = {'log': function(){}}; }
+//                if(!console || !console.log){ var console = {'log': function(){}}; }
                 var r = new App.Router({el: document.body});
-                var socket = io.connect('', {'sync disconnect on unload': true});
-                var emit = socket.emit;
-                socket.emit = function() {
-                    emit.apply(socket, arguments);
-                };
-                var $emit = socket.$emit;
-                socket.$emit = function(evt) {
-                    App.socket.receive.trigger.apply(App.socket.receive, Array.prototype.slice.apply(arguments));
-                    $emit.apply(socket, arguments);
-                };
-                App.socket.send.on('all', function(){
-                    socket.emit.apply(socket, Array.prototype.slice.call(arguments));
+                r.start();
+                r.add({'id': 2, 'pos': [32, 32]});
+                $('body').on({
+                    'keydown': function(e){
+                        if(e.keyCode == 38){
+                            //up
+//                            r.get(2).speed = 10;
+//                            r.get(2).angle = 270;
+                            r.get(2).speed++;
+                        }
+                        if(e.keyCode == 37){
+                            //left
+//                            r.get(2).speed = 10;
+//                            r.get(2).angle = 180;
+                            r.get(2).angle -= 5;
+                        }
+                        if(e.keyCode == 39){
+                            //right
+//                            r.get(2).speed = 10;
+//                            r.get(2).angle = 0;
+                            r.get(2).angle += 5;
+                        }
+                        if(e.keyCode == 40){
+                            //down
+//                            r.get(2).speed = 10;
+//                            r.get(2).angle = 90;
+                            r.get(2).speed--;
+                        }
+                        if(e.keyCode == 32){
+                            //space
+                        }
+                    },
+                    'keyup': function(e){
+//                        if(e.keyCode == 38){
+//                            r.get(2).speed = 0;
+//                        }
+//                        if(e.keyCode == 37){
+//                            r.get(2).speed = 0;
+//                        }
+//                        if(e.keyCode == 39){
+//                            r.get(2).speed = 0;
+//                        }
+//                        if(e.keyCode == 40){
+//                            r.get(2).speed = 0;
+//                        }
+                    }
                 });
+
+
+//                var socket = io.connect('', {'sync disconnect on unload': true});
+//                var emit = socket.emit;
+//                socket.emit = function() {
+//                    emit.apply(socket, arguments);
+//                };
+//                var $emit = socket.$emit;
+//                socket.$emit = function(evt) {
+//                    App.socket.receive.trigger.apply(App.socket.receive, Array.prototype.slice.apply(arguments));
+//                    $emit.apply(socket, arguments);
+//                };
+//                App.socket.send.on('all', function(){
+//                    socket.emit.apply(socket, Array.prototype.slice.call(arguments));
+//                });
             })();
         </script>
     </body>
