server i clients TDD

--- a/public/dev.html
+++ b/public/dev.html
@@ -26,12 +26,14 @@
 
         <!--<script src="d/js/game.js"></script>-->
 
+        <script src="/bco/client.js"></script>
+
+        <script src="d/js/objects.js"></script>
         <script src="d/js/router.js"></script>
         <script>
             (function() {
 //                if(!console || !console.log){ var console = {'log': function(){}}; }
                 var r = new App.Router({el: $('body')});
-                r.start();
 //                r.add({'id': 2, 'pos': [32, 32]});
 //                $('body').on({
 //                    'keydown': function(e){
