--- a/public_test/js/index.html
+++ b/public_test/js/index.html
@@ -33,7 +33,8 @@
 <script src="test.router.js"></script>
 
 <script>
-    mocha.run();
+    if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
+    else { mocha.run(); }
 </script>
 </body>
 </html>
