--- a/public/dev.html
+++ b/public/dev.html
@@ -14,6 +14,7 @@
         <script src="/lodash/lodash.js"></script>
         <script src="/backbone/backbone.js"></script>
         <!--<script src="d/js/backbone-patch.js"></script>-->
+        <script src="d/js/source/pixi.dev.js"></script>
         <script src="d/js/locale.js"></script>
         <script src="d/js/init.js"></script>
 
