--- a/public_test/js/index.html
+++ b/public_test/js/index.html
@@ -15,6 +15,7 @@
 <script src="../../node_modules/lodash/lodash.js"></script>
 <script src="../../node_modules/backbone/backbone.js"></script>
 
+<script src="../../public/d/js/source/pixi.dev.js"></script>
 
 <script src="../../public/d/js/locale.js"></script>
 <script src="../../public/d/js/init.js"></script>
