--- a/public/index.html
+++ b/public/index.html
@@ -19,24 +19,9 @@
     </head>
     <body>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+        <script src='/primus/primus.js'></script>
         <script src='d/j.js?{version}'></script>
-        <script>
-            (function() {
-                var r = new App.Router({el: $('body')});
-                var socket = io.connect('', {'sync disconnect on unload': true});
-                var emit = socket.emit;
-                socket.emit = function() {
-                    emit.apply(socket, arguments);
-                };
-                var $emit = socket.$emit;
-                socket.$emit = function(evt) {
-                    App.socket.receive.trigger.apply(App.socket.receive, Array.prototype.slice.apply(arguments));
-                    $emit.apply(socket, arguments);
-                };
-                App.socket.send.on('all', function(){
-                    socket.emit.apply(socket, Array.prototype.slice.call(arguments));
-                });
-            })();
-        </script>
+
+        <script src='d/run.js'></script>
     </body>
 </html>
