rooms client plugins

--- a/public/dev.html
+++ b/public/dev.html
@@ -7,15 +7,17 @@
         <!--[if lt IE 9]>
             <script src='http://html5shim.googlecode.com/svn/trunk/html5.js'></script>
         <![endif]-->
+        <script src="http://192.168.1.102:35729/livereload.js?snipver=1"></script>
     </head>
     <body>
         <script src="d/js/jquery-1.10.0.min.js"></script>
         <script src='/primus/primus.js'></script>
         <script src="/lodash/lodash.js"></script>
         <script src="/backbone/backbone.js"></script>
+        <script src="d/js/backbone-patch.js"></script>
         <!--<script src="d/js/backbone-patch.js"></script>-->
         <script src="d/js/source/pixi.dev.js"></script>
-        <script src="d/js/locale.js"></script>
+        <script src="d/js/lv.js"></script>
         <script src="d/js/init.js"></script>
 
         <!--<script src="d/js/popup.js"></script>-->
@@ -30,6 +32,7 @@
         <script src="/bco/client.js"></script>
 
         <script src="d/js/objects.js"></script>
+        <script src="d/js/rooms.js"></script>
         <script src="d/js/router.js"></script>
 
         <script src='d/js/run.js'></script>
