--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,7 @@
     </head>
     <body>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
-        <script src='/primus/primus.js'></script>
+        <script src='/pr.js'></script>
         <script src='d/j.js?{version}'></script>
-
-        <script src='d/run.js'></script>
     </body>
 </html>
