new room client side

--- a/public/dev.html
+++ b/public/dev.html
@@ -10,6 +10,7 @@
         <script src="http://192.168.1.102:35729/livereload.js?snipver=1"></script>
     </head>
     <body>
+        <div id="wrap"></div>
         <script src="d/js/jquery-1.10.0.min.js"></script>
         <script src='/primus/primus.js'></script>
         <script src="/lodash/lodash.js"></script>
