--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
         </script>
     </head>
     <body>
+        <div id="wrap"></div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
         <script src='/pr.js'></script>
         <script src='d/j.js?{version}'></script>
