tanks reincarnation : ) Yee

--- a/public_test/js/index.html
+++ b/public_test/js/index.html
@@ -2,22 +2,19 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Zolite Tests</title>
     <link href='../../public/d/css/screen.css' rel='stylesheet' />
     <link rel="stylesheet" href="../../node_modules/mocha/mocha.css" />
-    <script src="http://192.168.1.102:35729/livereload.js?snipver=1"></script>
 </head>
 <body>
 <div id="mocha"></div>
-<script src="lib/jquery-1.10.2.min.js"></script>
-<script src="lib/sinon-1.7.3.js"></script>
-<script src="lib/sinon-ie-1.7.1.js"></script>
+<script src="../../bower_components/jquery/dist/jquery.js"></script>
+<script src="../../bower_components/sinonjs/sinon.js"></script>
 
 <script src="../../node_modules/lodash/lodash.js"></script>
 <script src="../../node_modules/backbone/backbone.js"></script>
 <script src="../../public/d/js/backbone-patch.js"></script>
 
-<script src="../../public/d/js/source/pixi.dev.js"></script>
+<script src="../../bower_components/pixi.js/bin/pixi.dev.js"></script>
 
 <script src="../../public/d/js/init.js"></script>
 <script src="../../public/d/js/lv.js"></script>
