--- a/public/dev.html
+++ b/public/dev.html
@@ -7,17 +7,15 @@
         <!--[if lt IE 9]>
             <script src='http://html5shim.googlecode.com/svn/trunk/html5.js'></script>
         <![endif]-->
-        <script src="http://192.168.1.102:35729/livereload.js?snipver=1"></script>
     </head>
     <body>
         <div id="wrap"></div>
-        <script src="d/js/jquery-1.10.0.min.js"></script>
+        <script src="/jquery.js"></script>
         <script src='/primus/primus.js'></script>
         <script src="/lodash/lodash.js"></script>
         <script src="/backbone/backbone.js"></script>
         <script src="d/js/backbone-patch.js"></script>
-        <!--<script src="d/js/backbone-patch.js"></script>-->
-        <script src="d/js/source/pixi.dev.js"></script>
+        <script src="/pixi.js"></script>
         <script src="d/js/init.js"></script>
         <script src="d/js/lv.js"></script>
 
