moved from LV to EN localisation

--- a/public/dev.html
+++ b/public/dev.html
@@ -17,7 +17,7 @@
         <script src="d/js/backbone-patch.js"></script>
         <script src="/pixi.js"></script>
         <script src="d/js/init.js"></script>
-        <script src="d/js/lv.js"></script>
+        <script src="d/locale/en.js"></script>
 
         <!--<script src="d/js/popup.js"></script>-->
 
