--- a/public_test/js/index.html
+++ b/public_test/js/index.html
@@ -17,7 +17,7 @@
 <script src="../../bower_components/pixi.js/bin/pixi.dev.js"></script>
 
 <script src="../../public/d/js/init.js"></script>
-<script src="../../public/d/js/lv.js"></script>
+<script src="../../public/d/locale/en.js"></script>
 
 <script src="../../bco/client.js"></script>
 
