--- a/public_test/js/index.html
+++ b/public_test/js/index.html
@@ -8,6 +8,7 @@
 <body>
 <div id="mocha"></div>
 <script src="../../bower_components/jquery/dist/jquery.js"></script>
+<script src="../../bower_components/assert/assert.js"></script>
 <script src="../../bower_components/sinonjs/sinon.js"></script>
 
 <script src="../../node_modules/lodash/lodash.js"></script>
