make seperate client/server/common for game

--- a/public/dev.html
+++ b/public/dev.html
@@ -19,6 +19,7 @@
         <script src="d/js/init.js"></script>
         <script src="d/locale/en.js"></script>
 
+        <script src="/bco/index.js"></script>
         <script src="/bco/client.js"></script>
 
         <script src="d/js/objects.js"></script>
