--- a/public_test/js/index.html
+++ b/public_test/js/index.html
@@ -20,6 +20,7 @@
 <script src="../../public/d/js/init.js"></script>
 <script src="../../public/d/locale/en.js"></script>
 
+<script src="../../bco/index.js"></script>
 <script src="../../bco/client.js"></script>
 
 <script src="../../public/d/js/objects.js"></script>
@@ -43,6 +44,7 @@
 
 <script src="test.objects.js"></script>
 <script src="test.bco.js"></script>
+<script src="test.bco.client.js"></script>
 <script src="test.rooms.js"></script>
 <script src="test.router.js"></script>
 
