--- a/public/dev.html
+++ b/public/dev.html
@@ -4,9 +4,6 @@
         <title></title>
         <meta content='text/html;charset=utf-8' http-equiv='Content-Type' />
         <link rel='stylesheet' href='d/css/screen.css' />
-        <!--[if lt IE 9]>
-            <script src='http://html5shim.googlecode.com/svn/trunk/html5.js'></script>
-        <![endif]-->
     </head>
     <body>
         <div id="wrap"></div>
@@ -19,8 +16,8 @@
         <script src="d/js/init.js"></script>
         <script src="d/locale/en.js"></script>
 
-        <script src="/bco/index.js"></script>
-        <script src="/bco/client.js"></script>
+        <script src="/game/index.js"></script>
+        <script src="/game/client.js"></script>
 
         <script src="d/js/objects.js"></script>
         <script src="d/js/rooms.js"></script>
