--- a/public_test/js/index.html
+++ b/public_test/js/index.html
@@ -20,8 +20,8 @@
 <script src="../../public/d/js/init.js"></script>
 <script src="../../public/d/locale/en.js"></script>
 
-<script src="../../bco/index.js"></script>
-<script src="../../bco/client.js"></script>
+<script src="../../game/index.js"></script>
+<script src="../../game/client.js"></script>
 
 <script src="../../public/d/js/objects.js"></script>
 <script src="../../public/d/js/rooms.js"></script>
@@ -43,8 +43,8 @@
 <script>mocha.setup({'ui': 'bdd', ignoreLeaks: true})</script>
 
 <script src="test.objects.js"></script>
-<script src="test.bco.js"></script>
-<script src="test.bco.client.js"></script>
+<script src="test.game.js"></script>
+<script src="test.game.client.js"></script>
 <script src="test.rooms.js"></script>
 <script src="test.router.js"></script>
 
