--- a/public/dev.html
+++ b/public/dev.html
@@ -7,12 +7,12 @@
     </head>
     <body>
         <div id="wrap"></div>
-        <script src="/jquery.js"></script>
+        <script src="/bower_components/jquery/dist/jquery.js"></script>
         <script src='/primus/primus.js'></script>
         <script src="/lodash/lodash.js"></script>
         <script src="/backbone/backbone.js"></script>
         <script src="d/js/backbone-patch.js"></script>
-        <script src="/pixi.js"></script>
+        <script src="/bower_components/pixi.js/bin/pixi.js"></script>
         <script src="d/js/init.js"></script>
         <script src="d/locale/en.js"></script>
 
