--- a/public_test/js/index.html
+++ b/public_test/js/index.html
@@ -35,14 +35,15 @@
 
 </script>
 <script src="../../bower_components/jquery/dist/jquery.js"></script>
-<script src="../../bower_components/assert/assert.js"></script>
+<script src="../../bower_components/power-assert/build/power-assert.js"></script>
 <script src="../../bower_components/sinonjs/sinon.js"></script>
 
 <script src="../../bower_components/lodash/lodash.js"></script>
 <script src="../../node_modules/backbone/backbone.js"></script>
 <script src="../../public/d/js/backbone-patch.js"></script>
 
-<script src="../../bower_components/pixi.js/bin/pixi.js"></script>
+<!--<script src="../../bower_components/pixi.js/bin/pixi.js"></script>-->
+<script src="../../bower_components/babylonjs/dist/babylon.2.2.js"></script>
 
 <script src="../../public/d/js/init.js"></script>
 <script src="../../public/d/locale/en.js"></script>
