--- a/public/dev.html
+++ b/public/dev.html
@@ -12,7 +12,7 @@
         <script src="/lodash/lodash.js"></script>
         <script src="/backbone/backbone.js"></script>
         <script src="d/js/backbone-patch.js"></script>
-        <script src="/bower_components/pixi.js/bin/pixi.js"></script>
+        <script src="/bower_components/babylonjs/dist/babylon.2.2.js"></script>
         <script src="d/js/init.js"></script>
         <script src="d/locale/en.js"></script>
 
