moved out App.Order functionality

--- a/public/dev.html
+++ b/public/dev.html
@@ -13,6 +13,7 @@
         <script src="/backbone/backbone.js"></script>
         <script src="d/js/backbone-patch.js"></script>
         <script src="/bower_components/babylonjs/dist/babylon.2.2.js"></script>
+        <script src="/node_modules/Order/index.js"></script>
         <script src="d/js/init.js"></script>
         <script src="d/locale/en.js"></script>
 
