--- a/public/dev.html
+++ b/public/dev.html
@@ -9,10 +9,10 @@
         <div id="wrap"></div>
         <script src="/bower_components/jquery/dist/jquery.js"></script>
         <script src='/primus/primus.js'></script>
-        <script src="/lodash/lodash.js"></script>
+        <script src="/bower_components/lodash/dist/lodash.js"></script>
         <script src="/backbone/backbone.js"></script>
         <script src="d/js/backbone-patch.js"></script>
-        <script src="/bower_components/babylonjs/dist/babylon.2.2.js"></script>
+        <script src="/bower_components/babylonjs/dist/preview release/babylon.js"></script>
         <script src="/node_modules/Order/index.js"></script>
         <script src="d/js/init.js"></script>
         <script src="d/locale/en.js"></script>
